--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "social-network-api-mod18",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
         "start": "node server.js",
         "watch": "npx nodemon server.js",
