--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "homepage": "https://github.com/alinz07/social-network-api-mod18#readme",
     "dependencies": {
+        "dayjs": "^1.11.0",
         "express": "^4.17.3",
         "mongoose": "^6.2.9"
     }
